--- a/angular-website/src/app/components/features-page/features-page.component.html
+++ b/angular-website/src/app/components/features-page/features-page.component.html
@@ -1,16 +1,14 @@
 <section class="container mt-5">
-    <div class="row">
-        <div *ngFor="let card of cards" class="col-md-4">
-            <div class="card mb-4">
-              <img [src]=card.cardImg
-                class="card-img-top" 
-                alt="Image">
-              <div class="card-body">
-                <h5 class="card-title">{{card.cardTitle}}</h5>
-                <p class="card-text">{{card.cardText}}</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
+  <div *ngIf="restaurants" class="row">
+    <div *ngFor="let restaurant of restaurants" class="col-md-4">
+        <div class="card mb-4">
+          <img [src]=restaurant.backgroundImageURL class="card-img-top" alt="Image">
+          <div class="card-body">
+            <h5 class="card-title">{{restaurant.name}}</h5>
+            <p class="card-text">Dallas Restaurant</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
         </div>
     </div>
+  </div>
 </section>
