--- a/angular-website/src/app/components/header/header.component.html
+++ b/angular-website/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
             <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" routerLink="/features">Features</a>
+            <a class="nav-link" routerLink="/features">Restaurants</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" routerLink="/about-us">About Us</a>
