added single restaurant component

--- a/angular-website/src/app/components/features-page/features-page.component.html
+++ b/angular-website/src/app/components/features-page/features-page.component.html
@@ -18,8 +18,7 @@
               (click)= "getModalInfo(restaurant.favorites)"
               >Popular Foods
             </a>
-            <a href="#">View Restaurant</a>
-
+            <a routerLink="/detail/{{restaurant.id}}">View Restaurant</a>
           </div>
         </div>
     </div>
