Fixed landing page and added table for restaurant

--- a/angular-website/src/app/components/landing-page/landing-page.component.html
+++ b/angular-website/src/app/components/landing-page/landing-page.component.html
@@ -4,15 +4,15 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
-  <div class="carousel-inner">
+  <div class="carousel-inner" style="max-height: 480px;">
     <div class="carousel-item active">
-      <img src="https://picsum.photos/id/0/640/360" class="d-block w-100" alt="...">
+      <img src="./../../../assets/white-and-brown-cooked-dish.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://picsum.photos/id/1/640/360" class="d-block w-100" alt="...">
+      <img src="./../../../assets/alcohol-architecture-bar.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://picsum.photos/id/180/640/360" class="d-block w-100" alt="...">
+      <img src="./../../../assets/assorted-bottle.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -26,11 +26,10 @@
 </div>
 
 <div class="jumbotron">
-  <h1 class="display-4">Welcome</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
-    content or information.</p>
+  <h3 class="display-4">Dallas Restaurants</h3>
+  <p class="lead">Looking for a good place to eat, or perhaps a drink after a long day? There are multiple places to look for which meet your </p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  <p>We present the most popular restaurants in Dallas for your convenience.</p>
+  <a class="btn btn-primary btn-lg" routerLink="/features" role="button">View Restaurants</a>
 </div>
 
