--- a/angular-website/src/app/components/header/header.component.html
+++ b/angular-website/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">{{headerTitle}}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
